Fixed 100vh on mobile

--- a/src/pages/Match/Match.module.css
+++ b/src/pages/Match/Match.module.css
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: min-content min-content 1fr min-content min-content;
-  height: 100vh;
+  height: 100dvh;
   width: 100%;
 }
 
